updating package.json with dependencies

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "colt",
+  "name": "IBM-WISPr-Sample",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "request":"*"
+  },
+  "author": "blcheng",
+  "license": "GNU General Public License"
 }
